# kankakee

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
examples/: adapters.py  broadcast.py  cmd_server.py  discover.py  echo_server.py  listen.py
examples/datastructures/: __init__.py  capabilities.py  profiles.py
examples/onvif/: camera_tree.py  capture.py  discover.py  fields.py  server.py  subscriber.py  subscriber_harness.py  test.py  test_server.py  tui.py
examples/onvif/datastructures/: __init__.py  capabilities.py  datetime.py  device_io.py  event.py  imaging.py  network.py  profiles.py  ptz.py
examples/onvif/devices/: __init__.py  camera.py
examples/onvif/utils/: __init__.py  soap.py  xml.py
include/: Adapter.h  Broadcaster.h  Client.h  GnuNetUtil.h  Listener.h  MacNetUtil.h  MacServer.h  Server.h  WinBroadcaster.h  WinClient.h  WinListener.h  WinNetUtil.h  WinServer.h
kankakee/: __init__.py
scripts/linux/: linux_build
scripts/mac/: mac_build
scripts/mac/python/: install_python
scripts/windows/: windows_build.bat  windows_build.ps1
src/: kankakee.cpp
