[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.11",
]
build-backend = "scikit_build_core.build"

[project]
name = "kankakee"
version = "1.0.4"
description = "A python client/server module for onvif-gui"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Stephen Rhodes", email = "sr99622@gmail.com" },
]
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sr99622/kankakee"
"Bug Tracker" = "https://github.com/sr99622/kankakee/issues"

[tool.scikit-build]
wheel.packages = ["kankakee"]
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"

# optional, but nice for cleaner logs / reproducibility
minimum-version = "build-system.requires"