#/********************************************************************
# kankakee/pyproject.toml
#
# Copyright (c) 2023, 2024 Stephen Rhodes 
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along
# with this program; if not, write to the Free Software Foundation, Inc.,
# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
#
#******************************************************************************/

[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.11",
]
build-backend = "scikit_build_core.build"

[project]
name = "kankakee"
version = "1.0.4"
description = "A python client/server module for onvif-gui"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Stephen Rhodes", email = "sr99622@gmail.com" },
]
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sr99622/kankakee"
"Bug Tracker" = "https://github.com/sr99622/kankakee/issues"

[tool.scikit-build]
wheel.packages = ["kankakee"]
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"

# optional, but nice for cleaner logs / reproducibility
minimum-version = "build-system.requires"